Added og image & correct version

--- a/Website/index.html
+++ b/Website/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Raindrops">
     <meta property="og:description" content="Break the walled garden. Cross-platform file sharing for macOS.">
-    <meta property="og:image" content="/app.png">
+    <meta property="og:image" content="/og.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#00cbff">
 
